# gitui

./: Cargo.toml  DEV.md  README.md  ROADMAP.md
.cargo/: config.toml
src/: app.rs  async.rs  git.rs  gitui.rs  input_config.rs  input_worker.rs  main.rs  repo_state.rs  state.rs  ui.rs
src/async/: status.rs  worker.rs
src/ui/: changes.rs  common.rs  file_display.rs
src/ui/changes/: diffs.rs  file_list.rs
src/ui/utils/: file_display.rs  mod.rs
