[package]
name = "gitui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.1" }
color-eyre = "0.6.3"
crossterm = "0.29.0"
gix = "0.84.0"

[build]
jobs = 0

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
